--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@ ul li a i:hover {
   	<a href="portfolio.html">Sample Gallery</a>
   </nav>
   <span class="typcn typcn-flash-outline"><span>
-<h1>RICKY DELGADO DESIGN</h1>
+<h1><div data-name="flash-outline" data-code="0xe075" data-match="power,lightning flash outline " class="icon"><span class="typcn typcn-flash-outline"></span></div>
+RICKY DELGADO DESIGN</h1>
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
 
