--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="path/to/typicons.min.css">
+  <link rel="stylesheet" href="typicons.font-2.0.7/src/font/typicons.css">
   <style>
   
     
@@ -131,8 +131,7 @@ ul li a i:hover {
   	<a href="portfolio.html">Sample Gallery</a>
   </nav>
   <span class="typcn typcn-flash-outline"><span>
-<h1><div data-name="flash-outline" data-code="0xe075" data-match="power,lightning flash outline " class="icon"><span class="typcn typcn-flash-outline"></span></div>
-RICKY DELGADO DESIGN</h1>
+<h1>RICKY DELGADO DESIGN</h1>
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
 
