--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="typicons.font-2.0.7/src/font/typicons.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+
   <style>
   
   #type {
@@ -118,82 +120,20 @@ ul li i:hover {
   font-weight: normal;
   font-style: normal;
 }
-.box {
-  width:100px;
-  height:50px;
-  border: medium none;
-  display: inline-block;
-  vertical-align: top;
-  background-color: rgba(82, 86, 85,1.0);
-    position: relative;
-    width: 20%;
-    margin-left: 3.8%;
-    border-radius:25px;
-    
-    
-}
-.overlay {
-  position: relative;
-}
-.overlay:before{
-  position: absolute;
-  content:" ";
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  display: none;
-  z-index:0;
-}
-.overlay:hover:before{
-  display: block;
-}
-.magenta:before {
-  background-color: rgba(255, 0, 255,1.0);
-  border-radius:25px;
-}
-.limegreen:before {
-  background-color: rgba(51, 204, 51,1.0);
-  border-radius: 25px;
-}
-.orange:before{
-  background-color: rgba(255, 102, 0,1.0);
-  border-radius: 25px;
-}
-.teal:before{
-  background-color: rgba(51, 165, 193, 1.0);
-  border-radius: 25px;
-}
-.box * {
-    position: relative;
-}	
   </style>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
-<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
 </head>
 <body>
 <section id="logo">  <img src="http://i.imgur.com/TTlWXQo.png" alt="Ricky Delgado Graphic Design" width="200"></section>
-  <nav><div class="box overlay limegreen">
-  <h2>  <a href="http://rickydelgadomiami.me/">Home</a>  </h2>
-</div>
-<div class="box overlay magenta">
-    <h2> <a href="http://rickydelgadomiami.me/contact">Contact</a> </h2>
-</div>
-<div class="box overlay orange">
-    <h2> <a href="http://rickydelgadomiami.me/aboutme">About Me</a> </h2>
-</div>
-<div class="box overlay teal">
-    <h2> <a href="http://rickydelgadomiami.me/portfolio">Portfolio</a> </h2>
-</div>
-</nav>
   <p>
   <span class="typcn typcn-flash-outline"><span>
   	
-<section id="introduction><h1>RICKY DELGADO DESIGN</h1><span class="typcn typcn-flash-outline"><span>
-<p>
-</section><h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
+<section id="introduction"><h1>RICKY DELGADO DESIGN</h1><span class="typcn typcn-flash-outline"><span>
 
+<h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
+<p>
+</section>
 
 <a data-lightbox="miami" href="https://scontent.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/11176114_830146503742309_89748796_n.jpg" alt="Living in Miami"> 
 <img src="https://v.cdn.vine.co/v/avatars/03B81F6C-8227-421B-9EBA-1B31A783C393-901-0000003E18D17FD4.jpg?versionId=dzofZvtY5hL4JGUiihgA00M266at17VV">
