--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ ul li i:hover {
     }
     
     h2 {
-    	color: #303;
+    	color: rgb (255,255,255);
     	font-family: 'Open Sans', sans-serif;
     	font-size: 40px;
     }
@@ -107,8 +107,10 @@ ul li i:hover {
 	  background-repeat:no-repeat;
     }
     
-    #introduction {
-    	background-color: #fff;
+    .introduction {
+    	background-color: rgba(255,255,255,.9);
+    	width:cover;
+    	height:300px;
     }
    @font-face {
   font-family: 'typicons';
@@ -127,13 +129,13 @@ ul li i:hover {
 <body>
 <section id="logo">  <img src="http://i.imgur.com/TTlWXQo.png" alt="Ricky Delgado Graphic Design" width="200"></section>
   <p>
-  <span class="typcn typcn-flash-outline"><span>
+  <span class="typcn typcn-flash-outline"></span>
   	
-<section id="introduction"><h1>RICKY DELGADO DESIGN</h1><span class="typcn typcn-flash-outline"><span>
+<div class="introduction"><h1>RICKY DELGADO DESIGN</h1> <span class="typcn typcn-flash-outline"></span>
 
-<h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
+<h2>BRINGING DESIGN TO LIFE ONE BRIEF AT A TIME.</h2>
 <p>
-</section>
+</div>
 
 <a data-lightbox="miami" href="https://scontent.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/11176114_830146503742309_89748796_n.jpg" alt="Living in Miami"> 
 <img src="https://v.cdn.vine.co/v/avatars/03B81F6C-8227-421B-9EBA-1B31A783C393-901-0000003E18D17FD4.jpg?versionId=dzofZvtY5hL4JGUiihgA00M266at17VV">
