--- a/index.html
+++ b/index.html
@@ -98,19 +98,10 @@ ul li i:hover {
       text-align: center;
     }
     
-    #type {
-	  background-image: url(http://i.imgur.com/rYYrRJi.png);
-	  color: #33C;
-	  width: cover;
-          height: 250px;
-          text-align: center;
-	  background-repeat:no-repeat;
-    }
-    
     .introduction {
-    	background-color: rgba(255,255,255,.9);
+    	background-color: rgba(rgb(0, 0, 0,.9);
     	width:cover;
-    	height:300px;
+    	height:400px;
     }
    @font-face {
   font-family: 'typicons';
@@ -131,28 +122,14 @@ ul li i:hover {
   <p>
   <span class="typcn typcn-flash-outline"></span>
   	
-<div class="introduction"><h1>RICKY DELGADO DESIGN</h1> <span class="typcn typcn-flash-outline"></span>
-
-<h2>BRINGING DESIGN TO LIFE ONE BRIEF AT A TIME.</h2>
-<p>
+<div class="introduction">
+	<h1>RICKY DELGADO DESIGN</h1> <span class="typcn typcn-flash-outline"></span>
+	<h2>BRINGING DESIGN TO LIFE ONE BRIEF AT A TIME.</h2>
 </div>
 
 <a data-lightbox="miami" href="https://scontent.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/11176114_830146503742309_89748796_n.jpg" alt="Living in Miami"> 
 <img src="https://v.cdn.vine.co/v/avatars/03B81F6C-8227-421B-9EBA-1B31A783C393-901-0000003E18D17FD4.jpg?versionId=dzofZvtY5hL4JGUiihgA00M266at17VV">
 </a>
-
-
-<section id="type">
-<p>
-    <p>I am a graphic designer based in sunny Miami, Florida.
-    For contact information check out my contact page!
-</p>
-</section>
-
-
-<section id="work">
-  <button>See my work!</button>
-</section>
 
 <ul>
     <li><a href="https://www.facebook.com/rickydelgadojunior"><i class="fa fa-facebook"></i></a></li>
