--- a/csstest.html
+++ b/csstest.html
@@ -37,8 +37,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#06071e', end
 }
 
 #headertitle {
-background-color:rgba(0, 0, 0,.8);
-height: 150px;
+background-color:#04233e;
+height: 200px;
 
 }
 body {
@@ -148,7 +148,13 @@ h1 {
 </div>
 </nav>
 
-<section id="headertitle"> <h1>Ricardo Delgado Graphic Design</h1> </section>
+<section id="headertitle"> 
+ <a href="/index.html">
+  <img src="http://i.imgur.com/y4c2U8T.pngf" alt="Website Logo" style="width:cover;height:auto;border:0;position:fixed">
+</a> 
+<h1>Ricardo Delgado Graphic Design</h1> 
+
+</section>
 
 <section id=contenthome>
 Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!
