--- a/csstest.html
+++ b/csstest.html
@@ -132,8 +132,17 @@ h1 {
   text-transform: uppercase;
   letter-spacing: 2px;
 }
+
+#logo {
+  margin:auto
+  position:fixed
+  
+  
+}
 </style>
 <body>
+  <section id="logo"><a href="/index.html"></section>
+  <img src="http://i.imgur.com/y4c2U8T.pngf" alt="Website Logo">
 <nav><div class="box overlay limegreen">
   <h2>  <a href="http://rickydelgadomiami.me/">Home</a>  </h2>
 </div>
@@ -149,11 +158,7 @@ h1 {
 </nav>
 
 <section id="headertitle"> 
- <a href="/index.html">
-  <img src="http://i.imgur.com/y4c2U8T.pngf" alt="Website Logo" style="width:cover;height:auto;border:0;position:fixed">
-</a> 
 <h1>Ricardo Delgado Graphic Design</h1> 
-
 </section>
 
 <section id=contenthome>
