--- a/finalworking.html
+++ b/finalworking.html
@@ -1,13 +1,113 @@
 <!doctype html>
+<html>
 <head>
-  <title>Ricky Delgado Graphic Design</title>
-  
-  
-  <style>
-  
-  
-  
-  <style>
+<meta charset="UTF-8">
+<title>Camila Codino</title>
+<link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Vollkorn:400,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Raleway:400,700,800' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="shortcut icon" href="/faviconlogo.ico" />
+<link rel="apple-touch-icon" href="/faviconlogobig.png" />
+<span class="dashicons dashicons-twitter"></span>
+<style>
+nav {
+	text-align: left;
+	color: #404040;
+	font-family: 'Raleway', sans-serif;
+	background color: white;
+	}
+	
+body {
+	text-align: center;
+	background: -webkit-linear-gradient(90deg, #C9FFBF 10%, #FFAFBD 90%); /* Chrome 10+, Saf5.1+ */
+  background:    -moz-linear-gradient(90deg, #C9FFBF 10%, #FFAFBD 90%); /* FF3.6+ */
+  background:     -ms-linear-gradient(90deg, #C9FFBF 10%, #FFAFBD 90%); /* IE10 */
+  background:      -o-linear-gradient(90deg, #C9FFBF 10%, #FFAFBD 90%); /* Opera 11.10+ */
+  background:         linear-gradient(90deg, #C9FFBF 10%, #FFAFBD 90%); /* W3C */
+}
+h1 {
+	text-transform: uppercase;
+	letter-spacing: 20px;
+	margin-bottom: 0px;
+	margin-top: 250px;
+	font-family: 'Raleway', sans-serif, bold;
+	color: black;
+	text-align: center;
+	font-size: 96px;
+	}
+h2 {
+	color: #404040;
+	font-family: 'Raleway', sans-serif;
+	text-align: center;
+	margin-top: 5px;
+	margin-bottom: 260px;
+}
+h3 {
+	font-size: 30px;
+	color: white;
+	font-weight: bold;
+	margin-top: 10;
+	margin-bottom: 10;
+	font-family: 'Vollkorn', serif;
+	letter-spacing: 25px;
+	}
+#name {
+	padding: 10px;
+	background-size: cover;
+	text-align: center;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	}
+	
+a {
+	text-decoration: none;
+	color: #1A1A1A;
+}
+a:hover {
+	color: #8F8F8F;
+	}
+	
+</style>
+<script type="text/javascript">    
+    var clientWidth = document.documentElement.clientWidth;
+    document.getElementById('nav').style.width = clientWidth + "px";
+    var padding = 50;
+    document.getElementById('name').style.width = (clientWidth - (padding * 2)) + "px";
+    document.getElementById('name').style.left = padding + "px";
+  </script>
+</head>
+
+<body>
+<nav><a href="index.html">Home</a> | <a href="about.html">About Me</a> | <a href="contact.html">Contact Information</a> | <a href="gallery.html">Work</a> | <a href="resume.html">Resume</a></nav>
+<section id="name">
+<img src= "http://i.imgur.com/y4c2U8T.png" alt="Banner">
+<br>
+</section>
+<section id="boxes">
+<a href="about.html"><img src= "http://i.imgur.com/qHGf9Fc.jpg" alt="About"></a>
+<a href="contact.html"><img src="http://i.imgur.com/PccmeNr.jpg" alt="Contact"></a>
+<a href="gallery.html"><img src="http://i.imgur.com/Bdszczh.jpg" alt="Work"></a>
+<a href="resume.html"><img src="http://i.imgur.com/CtFHDuE.jpg" alt="Resume"></a>
+</section>
+<nav>
+<div style="font-size: 20px; color: rgb(255, 255, 255); text-align: center;">
+<a href="https://www.facebook.com/camilacodino"><i class="fa fa-facebook"></i></a> |
+<a href="https://twitter.com/camicodino"><i class="fa fa-twitter-square"></i></a> |
+<a href="https://instagram.com/camilacodino/"><i class="fa fa-instagram"></i></a>
+content: "\f301";
+</div>
+</nav>
+</body>
+</html>
+  <script type="text/javascript">    
+    var clientWidth = document.documentElement.clientWidth;
+    document.getElementById('headerwrap').style.width = clientWidth + "px";
+    var padding = 50;
+    document.getElementById('header').style.width = (clientWidth - (padding * 2)) + "px";
+    document.getElementById('header').style.left = padding + "px";
+  </script>
 
 
 
