--- a/finalworking.html
+++ b/finalworking.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Camila Codino</title>
+<title>Ricky Delgado Graphic Design</title>
 <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Vollkorn:400,700' rel='stylesheet' type='text/css'>
@@ -12,12 +12,17 @@
 <link rel="apple-touch-icon" href="/faviconlogobig.png" />
 <span class="dashicons dashicons-twitter"></span>
 <style>
-nav {
-	text-align: left;
-	color: #404040;
-	font-family: 'Raleway', sans-serif;
-	background color: white;
-	}
+.nav a {
+  color: #5a5a5a;
+  font-size: 11px;
+  font-weight: bold;
+  padding: 14px 10px;
+  text-transform: uppercase;
+}
+
+.nav li {
+  display: inline;
+}
 	
 body {
 	text-align: center;
@@ -80,7 +85,16 @@ a:hover {
 </head>
 
 <body>
-<nav><a href="index.html">Home</a> | <a href="about.html">About Me</a> | <a href="contact.html">Contact Information</a> | <a href="gallery.html">Work</a> | <a href="resume.html">Resume</a></nav>
+    <div class="nav">
+      <div class="container">
+        <ul class="pull-right">
+          <li><a href="/about.html">About Me</a></li>
+          <li><a href="/contact.html">Contact Me</a></li>
+          <li><a href="/resume.html">Resume</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+        </ul>
+      </div>
+    </div>
 <section id="name">
 <img src= "http://i.imgur.com/y4c2U8T.png" alt="Banner">
 <br>
