--- a/finalworking.html
+++ b/finalworking.html
@@ -96,7 +96,7 @@ a:hover {
       </div>
     </div>
 <section id="name">
-<img src= "http://i.imgur.com/y4c2U8T.png" alt="Banner">
+<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
 <br>
 </section>
 <section id="boxes">
