--- a/finalworking.html
+++ b/finalworking.html
@@ -24,44 +24,31 @@
   display: inline;
 }
 	
-body {
-	text-align: center;
-	background: -webkit-linear-gradient(90deg, #C9FFBF 10%, #FFAFBD 90%); /* Chrome 10+, Saf5.1+ */
-  background:    -moz-linear-gradient(90deg, #C9FFBF 10%, #FFAFBD 90%); /* FF3.6+ */
-  background:     -ms-linear-gradient(90deg, #C9FFBF 10%, #FFAFBD 90%); /* IE10 */
-  background:      -o-linear-gradient(90deg, #C9FFBF 10%, #FFAFBD 90%); /* Opera 11.10+ */
-  background:         linear-gradient(90deg, #C9FFBF 10%, #FFAFBD 90%); /* W3C */
+.jumbotron {
+  background-image:url('http://goo.gl/04j7Nn');
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-h1 {
-	text-transform: uppercase;
-	letter-spacing: 20px;
-	margin-bottom: 0px;
-	margin-top: 250px;
-	font-family: 'Raleway', sans-serif, bold;
-	color: black;
-	text-align: center;
-	font-size: 96px;
-	}
-h2 {
-	color: #404040;
-	font-family: 'Raleway', sans-serif;
-	text-align: center;
-	margin-top: 5px;
-	margin-bottom: 260px;
+
+.jumbotron .container {
+  position: relative;
+  top:100px;
 }
-h3 {
-	font-size: 30px;
-	color: white;
-	font-weight: bold;
-	margin-top: 10;
-	margin-bottom: 10;
-	font-family: 'Vollkorn', serif;
-	letter-spacing: 25px;
-	}
+
+.jumbotron h1 {
+  color: #fff;
+  font-size: 48px;  
+  font-family: 'Shift', sans-serif;
+  font-weight: bold;
+}
+
+.jumbotron p {
+  font-size: 20px;
+  color: #fff;
+}
 #name {
 	padding: 10px;
-	background-size: cover;
-	text-align: center;
 	background-size: 100%;
 	background-repeat: no-repeat;
 	}
@@ -99,6 +86,14 @@ a:hover {
 <img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
 <br>
 </section>
+
+<div class="jumbotron">
+      <div class="container">
+        <h1>BRINGING DESIGN TO LIFE ONE BRIEF AT A TIME!</h1>
+        <p>Rent from people in over 34,000 cities and 192 countries.</p>
+        <a href="#">Learn More</a>
+      </div>
+    </div> 
 <section id="boxes">
 <a href="about.html"><img src= "http://i.imgur.com/qHGf9Fc.jpg" alt="About"></a>
 <a href="contact.html"><img src="http://i.imgur.com/PccmeNr.jpg" alt="Contact"></a>
