--- a/finalworking.html
+++ b/finalworking.html
@@ -3,14 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <title>Ricky Delgado Graphic Design</title>
-<link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Vollkorn:400,700' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Raleway:400,700,800' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link rel="shortcut icon" href="/faviconlogo.ico" />
-<link rel="apple-touch-icon" href="/faviconlogobig.png" />
-<span class="dashicons dashicons-twitter"></span>
+   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+   
+   <link rel="shortcut icon" href="/RickyDelgadoFavicon.ico" />
+   <link rel="apple-touch-icon" href="/RickyDelgadoTouchFavicon.png" />
+  
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+   <link rel="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
+  
+   
+   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+   <link rel="stylesheet" href="typicons.font-2.0.7/src/font/typicons.css">
+  
+
+
 <style>
 .nav a {
   color: #5a5a5a;
@@ -39,27 +46,21 @@
 .jumbotron h1 {
   color: #fff;
   font-size: 48px;  
-  font-family: 'Shift', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: bold;
+  margin-left:150px;
 }
 
 .jumbotron p {
   font-size: 20px;
   color: #fff;
 }
-#name {
+.name .container {
 	padding: 10px;
-	background-size: 100%;
+	margin: 90%;
 	background-repeat: no-repeat;
 	}
-	
-a {
-	text-decoration: none;
-	color: #1A1A1A;
-}
-a:hover {
-	color: #8F8F8F;
-	}
+
 	
 </style>
 <script type="text/javascript">    
@@ -82,8 +83,10 @@ a:hover {
         </ul>
       </div>
     </div>
-<section id="name">
-<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
+<div class="name">
+    <div class="container">
+    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
+    </div>
 <br>
 </section>
 
