--- a/finalworking.html
+++ b/finalworking.html
@@ -55,9 +55,9 @@
   font-size: 20px;
   color: #fff;
 }
-.name .container {
+#name img {
 	padding: 10px;
-	margin: 90%;
+	margin: auto;
 	background-repeat: no-repeat;
 	}
 
@@ -83,12 +83,9 @@
         </ul>
       </div>
     </div>
-<div class="name">
-    <div class="container">
+<section id="name">
     	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
-    </div>
-<br>
-</section>
+    <section/>
 
 <div class="jumbotron">
       <div class="container">
