--- a/finalworking.html
+++ b/finalworking.html
@@ -45,10 +45,11 @@
 
 .jumbotron h1 {
   color: #fff;
-  font-size: 48px;  
+  font-size: 128px;  
   font-family: 'Open Sans', sans-serif;
-  font-weight: bold;
+  font-weight: normal;
   margin-left:150px;
+  margin-top:100px;
 }
 
 .jumbotron p {
@@ -89,9 +90,9 @@
 
 <div class="jumbotron">
       <div class="container">
-        <h1>BRINGING DESIGN TO LIFE ONE BRIEF AT A TIME!</h1>
-        <p>Rent from people in over 34,000 cities and 192 countries.</p>
-        <a href="#">Learn More</a>
+        <h1>BRINGING DESIGN TO LIFE,</h1>
+        <br>
+        <h1>ONE BRIEF AT A TIME!</h1>
       </div>
     </div> 
 <section id="boxes">
