--- a/finalworking.html
+++ b/finalworking.html
@@ -45,9 +45,9 @@
 
 .jumbotron h1 {
   color: #fff;
-  font-size: 128px;  
+  font-size: 110px;  
   font-family: 'Open Sans', sans-serif;
-  font-weight: normal;
+  font-weight: 400;
   margin-left:150px;
   margin-top:100px;
 }
@@ -90,9 +90,7 @@
 
 <div class="jumbotron">
       <div class="container">
-        <h1>BRINGING DESIGN TO LIFE,</h1>
-        <br>
-        <h1>ONE BRIEF AT A TIME!</h1>
+        <h1>BRINGING DESIGN TO LIFE, ONE BRIEF AT A TIME!</h1>
       </div>
     </div> 
 <section id="boxes">
