--- a/finalworking.html
+++ b/finalworking.html
@@ -21,7 +21,7 @@
 <style>
 .nav a {
   color: #5a5a5a;
-  font-size: 11px;
+  font-size: 24px;
   font-weight: bold;
   padding: 14px 10px;
   text-transform: uppercase;
@@ -30,10 +30,18 @@
 .nav li {
   display: inline;
 }
+
+.nav a: hover {
+  color: #5a5a5a;
+  font-size: 24px;
+  font-weight: normal;
+  padding: 14px 10px;
+  text-transform: lowercase;
+}
 	
 .jumbotron {
   background-image:url('http://goo.gl/04j7Nn');
-  height: 500px;
+  height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -60,6 +68,7 @@
 	padding: 10px;
 	margin: auto;
 	background-repeat: no-repeat;
+	position: relative;
 	}
 
 	
