--- a/finalworking.html
+++ b/finalworking.html
@@ -44,6 +44,7 @@
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-top:-20px;
 }
 
 .jumbotron .container {
@@ -53,7 +54,7 @@
 
 .jumbotron h1 {
   color: #fff;
-  font-size: 110px;  
+  font-size: 95px;  
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   margin-left:150px;
