--- a/finalworking.html
+++ b/finalworking.html
@@ -66,10 +66,10 @@
   color: #fff;
 }
 #name img {
-	padding: 10px;
-	margin: 90%;
-	background-repeat: no-repeat;
-	position: relative;
+	background-image: url(http://i.imgur.com/IUEIOQm.jpg);
+        margin: 0px 20px 0px 20px
+	padding: 15px 0px 15px;
+	background-image: no-repeat;
 	}
 
 	
