--- a/finalworking.html
+++ b/finalworking.html
@@ -65,11 +65,10 @@
   font-size: 20px;
   color: #fff;
 }
-#name img {
-	background-image: url(http://i.imgur.com/IUEIOQm.jpg);
-        margin: 0px 20px 0px 20px
-	padding: 15px 0px 15px;
-	background-image: no-repeat;
+#name {
+	background-image: url(http://i.imgur.com/FLOvLva.png" alt="Banner);
+        background-size:cover;
+        
 	}
 
 	
@@ -95,7 +94,6 @@
       </div>
     </div>
 <section id="name">
-    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
     <section/>
 
 <div class="jumbotron">
