--- a/finalworking.html
+++ b/finalworking.html
@@ -65,9 +65,10 @@
   font-size: 20px;
   color: #fff;
 }
-#name {
-	background-image: url(http://i.imgur.com/FLOvLva.png" alt="Banner);
-        background-size:cover;
+#name img{
+        size:cover;
+        background-size: cover;
+        width: 100% !important;
         
 	}
 
@@ -94,6 +95,7 @@
       </div>
     </div>
 <section id="name">
+    <img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
     <section/>
 
 <div class="jumbotron">
