--- a/finalworking.html
+++ b/finalworking.html
@@ -44,7 +44,7 @@
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top:-320px;
+  margin-top:-220px;
 }
 
 .jumbotron .container {
@@ -69,6 +69,7 @@
         size:cover;
         background-size: cover;
         width: 100% !important;
+        position: fixed;
         
 	}
 
@@ -103,18 +104,13 @@
         <h1>BRINGING DESIGN TO LIFE, ONE BRIEF AT A TIME!</h1>
       </div>
     </div> 
-<section id="boxes">
-<a href="about.html"><img src= "http://i.imgur.com/qHGf9Fc.jpg" alt="About"></a>
-<a href="contact.html"><img src="http://i.imgur.com/PccmeNr.jpg" alt="Contact"></a>
-<a href="gallery.html"><img src="http://i.imgur.com/Bdszczh.jpg" alt="Work"></a>
-<a href="resume.html"><img src="http://i.imgur.com/CtFHDuE.jpg" alt="Resume"></a>
-</section>
-<nav>
-<div style="font-size: 20px; color: rgb(255, 255, 255); text-align: center;">
-<a href="https://www.facebook.com/camilacodino"><i class="fa fa-facebook"></i></a> |
-<a href="https://twitter.com/camicodino"><i class="fa fa-twitter-square"></i></a> |
-<a href="https://instagram.com/camilacodino/"><i class="fa fa-instagram"></i></a>
-content: "\f301";
+<div style="font-size: 20px; text-align: center;">
+<a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951" target="_blank">
+<img alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50"></a>
+<a href="https://www.facebook.com/rickydelgadojunior" target="_blank">
+<img alt="Facebook" src="http://i.imgur.com/kX0UajV.png" width="50" height="50"></a>
+<a href="https://twitter.com/RickyDelgadoMIA" target="_blank">
+<img alt="Twitter" src="http://i.imgur.com/eeDJ0FM.png" width="50" height="50"></a>
 </div>
 </nav>
 </body>
