--- a/finalworking.html
+++ b/finalworking.html
@@ -65,7 +65,7 @@
   font-size: 20px;
   color: #fff;
 }
-#name img{
+.name img{
         size:cover;
         background-size: cover;
         width: 100% !important;
@@ -95,16 +95,17 @@
         </ul>
       </div>
     </div>
-<section id="name">
-    <img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
-    <section/>
+<div class="name">
+    <div class="container">
+    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
+       <div/>
+    </div>
 
 <div class="jumbotron">
       <div class="container">
         <h1>BRINGING DESIGN TO LIFE, ONE BRIEF AT A TIME!</h1>
       </div>
     </div> 
-<div style="font-size: 20px; text-align: center;">
 <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951" target="_blank">
 <img alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50"></a>
 <a href="https://www.facebook.com/rickydelgadojunior" target="_blank">
