--- a/finalworking.html
+++ b/finalworking.html
@@ -65,12 +65,25 @@
   font-size: 20px;
   color: #fff;
 }
-.name img {
-        size:cover;
-        background-size: cover;
-        width: 100% !important;
-	}
 
+div#wrapperHeader {
+ width:100%;
+ height;200px; /* height of the background image? */
+ background:url(images/header.png) repeat-x 0 0;
+ text-align:center;
+}
+
+div#wrapperHeader div#header {
+ width:1000px;
+ height:200px;
+ margin:0 auto;
+}
+
+div#wrapperHeader div#header img {
+ width:auto; /* the width of the logo image */
+ height:auto; /* the height of the logo image */
+ margin:0 auto;
+}
 	
 </style>
 <script type="text/javascript">    
@@ -93,11 +106,12 @@
         </ul>
       </div>
     </div>
-<div class="name">
-    <div class="container">
-    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
-       <div/>
-    </div>
+
+<div id="wrapperHeader">
+ <div id="header">
+  <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" />
+ </div> 
+</div>
 
 <div class="jumbotron">
       <div class="container">
