--- a/finalworking.html
+++ b/finalworking.html
@@ -44,7 +44,7 @@
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top:120px;
+  margin-top:-100px;
 }
 
 .jumbotron .container {
@@ -109,7 +109,7 @@ div#wrapperHeader div#header img {
 
 <div id="wrapperHeader">
  <div id="header">
-  <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" />
+  <img src="http://i.imgur.com/xYpCwC2.png" alt="Banner" />
  </div> 
 </div>
 
