--- a/finalworking.html
+++ b/finalworking.html
@@ -69,7 +69,7 @@
 div#wrapperHeader {
  width:100%;
  height;200px; /* height of the background image? */
- background:url(images/header.png) repeat-x 0 0;
+ background:url(http://i.imgur.com/xYpCwC2.png) repeat-x 0 0;
  text-align:center;
 }
 
