--- a/finalworking.html
+++ b/finalworking.html
@@ -66,23 +66,10 @@
   color: #fff;
 }
 
-div#wrapperHeader {
- width:100%;
- height;200px; /* height of the background image? */
- background:url(http://i.imgur.com/xYpCwC2.png) repeat-x 0 0;
- text-align:center;
-}
-
-div#wrapperHeader div#header {
- width:1000px;
- height:200px;
- margin:0 auto;
-}
-
-div#wrapperHeader div#header img {
- width:auto; /* the width of the logo image */
- height:auto; /* the height of the logo image */
- margin:0 auto;
+.name {
+	background-size: cover;
+        width: 100% !important;
+        text-align: center;
 }
 	
 </style>
@@ -107,11 +94,9 @@ div#wrapperHeader div#header img {
       </div>
     </div>
 
-<div id="wrapperHeader">
- <div id="header">
+<div class="name">
   <img src="http://i.imgur.com/xYpCwC2.png" alt="Banner" />
  </div> 
-</div>
 
 <div class="jumbotron">
       <div class="container">
