--- a/finalworking.html
+++ b/finalworking.html
@@ -66,7 +66,7 @@
   color: #fff;
 }
 
-.name {
+.name :img {
 	background-size: cover;
         width: 100% !important;
         text-align: center;
@@ -95,6 +95,7 @@
     </div>
 
 <div class="name">
+  <div class="container">
   <img src="http://i.imgur.com/xYpCwC2.png" alt="Banner" />
  </div> 
 
