--- a/finalworking.html
+++ b/finalworking.html
@@ -68,8 +68,7 @@
 
 .name :img {
         width: 100% !important;
-        text-align: center;
-        margin:100%;
+        position: relative;
         
 }
 	
