--- a/finalworking.html
+++ b/finalworking.html
@@ -66,11 +66,12 @@
   color: #fff;
 }
 
-.name :img {
+.name img {
+        size:cover;
+        background-size: cover;
         width: 100% !important;
-        position: relative;
-        
-}
+	}
+
 	
 </style>
 <script type="text/javascript">    
@@ -95,9 +96,10 @@
     </div>
 
 <div class="name">
-  <div class="container">
-  <img src="http://i.imgur.com/aIesOQ8.png" alt="Banner" />
- </div> 
+    <div class="container">
+    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
+       <div/>
+    </div>
 
 <div class="jumbotron">
       <div class="container">
