--- a/finalworking.html
+++ b/finalworking.html
@@ -66,7 +66,7 @@
   color: #fff;
 }
 
-.name img {
+.name: img {
         size:cover;
         background-size: cover;
         width: 100% !important;
