--- a/finalworking.html
+++ b/finalworking.html
@@ -70,7 +70,7 @@
         size:cover;
         background-size: cover;
         width: 100% !important;
-        position:relative;
+        margin:auto;
 	}
 
 	
