--- a/finalworking.html
+++ b/finalworking.html
@@ -44,7 +44,7 @@
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top:-100px;
+  margin-top:-160px;
 }
 
 .jumbotron .container {
@@ -67,10 +67,11 @@
 }
 
 .name: img {
-        size:cover;
+        background-repeat: no-repeat;
         background-size: cover;
         width: 100% !important;
-        margin:auto;
+        margin-left:15%;
+        margin-right:15%;
 	}
 
 	
