--- a/finalworking.html
+++ b/finalworking.html
@@ -69,7 +69,7 @@
 .name: img {
         background-repeat: no-repeat;
         background-size: cover;
-        width: 100% !important;
+        width: cover;
         margin-left:15%;
         margin-right:15%;
 	}
