--- a/finalworking.html
+++ b/finalworking.html
@@ -74,6 +74,12 @@
         margin-right:15%;
 	}
 
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
+}
+
 	
 </style>
 <script type="text/javascript">    
@@ -97,11 +103,14 @@
       </div>
     </div>
 
-<div class="name">
-    <div class="container">
-    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
-       <div/>
-    </div>
+
+<IMG class="displayed" src="http://i.imgur.com/FLOvLva.png" alt="Banner">
+
+<div class="name"
+    <div class="container"
+    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner"
+       <div/
+    </div
 
 <div class="jumbotron">
       <div class="container">
