--- a/finalworking.html
+++ b/finalworking.html
@@ -69,16 +69,11 @@
 .name: img {
         background-repeat: no-repeat;
         background-size: cover;
-        width: cover;
-        margin-left:15%;
-        margin-right:15%;
+	display: block;
+        margin-left: auto;
+        margin-right: auto
 	}
 
-IMG.displayed {
-    display: block;
-    margin-left: auto;
-    margin-right: auto 
-}
 
 	
 </style>
@@ -103,14 +98,11 @@ IMG.displayed {
       </div>
     </div>
 
-
-<IMG class="displayed" src="http://i.imgur.com/FLOvLva.png" alt="Banner">
-
-<div class="name"
-    <div class="container"
-    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner"
-       <div/
-    </div
+<div class="name">
+    <div class="container">
+    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
+       <div/>
+    </div>
 
 <div class="jumbotron">
       <div class="container">
