--- a/finalworking.html
+++ b/finalworking.html
@@ -100,7 +100,7 @@
 
 <div class="name">
     <div class="container">
-    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
+    	<img src= "http://i.imgur.com/aIesOQ8.png" alt="Banner">
        <div/>
     </div>
 
