--- a/finalworking.html
+++ b/finalworking.html
@@ -66,7 +66,7 @@
   color: #fff;
 }
 
-.name: img {
+.name .container {
         background-repeat: no-repeat;
         background-size: cover;
 	display: block;
@@ -100,7 +100,7 @@
 
 <div class="name">
     <div class="container">
-    	<img src= "http://i.imgur.com/aIesOQ8.png" alt="Banner">
+    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
        <div/>
     </div>
 
