--- a/finalworking.html
+++ b/finalworking.html
@@ -66,12 +66,14 @@
   color: #fff;
 }
 
-.name .container {
+.name {
         background-repeat: no-repeat;
         background-size: cover;
 	display: block;
         margin-left: auto;
         margin-right: auto
+        overflow: visible;
+        position: absolute;
 	}
 
 
