--- a/finalworking.html
+++ b/finalworking.html
@@ -70,9 +70,8 @@
         background-repeat: no-repeat;
         background-size: cover;
 	display: block;
-        margin-left: auto;
-        margin-right: auto
-        overflow: visible;
+        margin-left: none;
+        margin-right: none
         position: absolute;
 	}
 
