--- a/finalworking.html
+++ b/finalworking.html
@@ -72,7 +72,7 @@
 	display: block;
         margin-left: none;
         margin-right: none
-        position: absolute;
+        position: center;
 	}
 
 
