--- a/finalworking.html
+++ b/finalworking.html
@@ -66,7 +66,7 @@
   color: #fff;
 }
 
-.name {
+.name:img {
         background-repeat: no-repeat;
         background-size: cover;
 	display: block;
