--- a/finalworking.html
+++ b/finalworking.html
@@ -101,7 +101,7 @@
 
 <div class="name">
     <div class="container">
-    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner">
+    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner" width="1000px">
        <div/>
     </div>
 
