--- a/finalworking.html
+++ b/finalworking.html
@@ -22,23 +22,17 @@
 .nav a {
   color: #5a5a5a;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: normal;
+  font-family: 'Open Sans', sans-serif;
   padding: 14px 10px;
   text-transform: uppercase;
+  text-decoration:none;
 }
 
 .nav li {
   display: inline;
 }
 
-.nav a: hover {
-  color: #5a5a5a;
-  font-size: 24px;
-  font-weight: normal;
-  padding: 14px 10px;
-  text-transform: lowercase;
-}
-	
 .jumbotron {
   background-image:url('http://goo.gl/04j7Nn');
   height: 530px;
@@ -66,14 +60,13 @@
   color: #fff;
 }
 
-.name:img {
+.name {
+        background-repeat: no-repeat;
+        background-size: cover;
         background-repeat: no-repeat;
         background-size: cover;
 	display: block;
-        margin-left: none;
-        margin-right: none
-        position: center;
-	}
+        }
 
 
 	
