--- a/finalworking.html
+++ b/finalworking.html
@@ -68,7 +68,38 @@
 	display: block;
         }
 
+responsive-container {
+    position: relative;
+    width: 100%;
+    border: 1px solid black;
+}
 
+.dummy {
+    padding-top: 100%; /* forces 1:1 aspect ratio */
+}
+
+.img-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    text-align:center; /* Align center inline elements */
+    font: 0/0 a;
+}
+
+.img-container:before {
+    content: ' ';
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
+}
+
+.img-container img {
+    vertical-align: middle;
+    display: inline-block;
+}
 	
 </style>
 <script type="text/javascript">    
@@ -92,11 +123,13 @@
       </div>
     </div>
 
-<div class="name">
-    <div class="container">
-    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner" width="cover">
-       <div/>
+<div class="responsive-container">
+    <div class="dummy"></div>
+
+    <div class="img-container">
+        <img src="http://i.imgur.com/FLOvLva.png" alt="RickyDelgado" />
     </div>
+</div>
 
 <div class="jumbotron">
       <div class="container">
