--- a/finalworking.html
+++ b/finalworking.html
@@ -71,7 +71,7 @@
 responsive-container {
     position: relative;
     width: 100%;
-    border: 1px solid black;
+    border: 0px solid black;
 }
 
 .dummy {
@@ -92,12 +92,12 @@ responsive-container {
 .img-container:before {
     content: ' ';
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: none;
     height: 100%;
 }
 
 .img-container img {
-    vertical-align: middle;
+    vertical-align: none;
     display: inline-block;
 }
 	
