--- a/finalworking.html
+++ b/finalworking.html
@@ -66,40 +66,16 @@
         background-repeat: no-repeat;
         background-size: cover;
 	display: block;
+	margin:center;
         }
 
-responsive-container {
-    position: relative;
-    width: 100%;
-    border: 0px solid black;
-}
 
-.dummy {
-    padding-top: 100%; /* forces 1:1 aspect ratio */
-}
 
-.img-container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
-    text-align:center; /* Align center inline elements */
-    font: 0/0 a;
-}
-
-.img-container:before {
-    content: ' ';
-    display: inline-block;
-    vertical-align: none;
-    height: 100%;
-}
-
-.img-container img {
-    vertical-align: none;
-    display: inline-block;
-}
+<div class="name">
+    <div class="container">
+    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner" width="cover">
+       <div/>
+    </div>
 	
 </style>
 <script type="text/javascript">    
