--- a/finalworking.html
+++ b/finalworking.html
@@ -38,7 +38,7 @@
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top:-760px;
+  margin-top:-60px;
 }
 
 .jumbotron .container {
@@ -68,6 +68,11 @@
 	display: block;
 	margin:center;
         }
+
+.name .container {
+  position: relative;
+  top:20px;
+}
 
 
 
@@ -99,13 +104,10 @@
       </div>
     </div>
 
-<div class="responsive-container">
-    <div class="dummy"></div>
-
-    <div class="img-container">
-        <img src="http://i.imgur.com/FLOvLva.png" alt="RickyDelgado" />
+<div class="name">
+	<div class="container">
+      </div>
     </div>
-</div>
 
 <div class="jumbotron">
       <div class="container">
