--- a/finalworking.html
+++ b/finalworking.html
@@ -63,8 +63,7 @@
 .name {
         background-repeat: no-repeat;
         background-size: cover;
-        background-repeat: no-repeat;
-        background-size: cover;
+        background-image: url(http://i.imgur.com/FLOvLva.png" alt="Banner" width="cover");
 	display: block;
 	margin:center;
         }
@@ -78,7 +77,6 @@
 
 <div class="name">
     <div class="container">
-    	<img src= "http://i.imgur.com/FLOvLva.png" alt="Banner" width="cover">
        <div/>
     </div>
 	
