--- a/finalworking.html
+++ b/finalworking.html
@@ -61,6 +61,7 @@
 }
 
 .name {
+        height:300px;
         background-repeat: no-repeat;
         background-size: cover;
         background-image: url(http://i.imgur.com/FLOvLva.png" alt="Banner" width="cover");
@@ -68,17 +69,10 @@
 	margin:center;
         }
 
-.name .container {
-  position: relative;
-  top:20px;
-}
-
 
 
 <div class="name">
-    <div class="container">
        <div/>
-    </div>
 	
 </style>
 <script type="text/javascript">    
