--- a/finalworking.html
+++ b/finalworking.html
@@ -60,20 +60,13 @@
   color: #fff;
 }
 
-.name {
+.name:img {
         height:300px;
         background-repeat: no-repeat;
         background-size: cover;
-        background-image: url(http://i.imgur.com/FLOvLva.png" alt="Banner" width="cover");
 	display: block;
 	margin:center;
         }
-
-
-
-<div class="name">
-       <div/>
-	
 </style>
 <script type="text/javascript">    
     var clientWidth = document.documentElement.clientWidth;
@@ -97,7 +90,9 @@
     </div>
 
 <div class="name">
-	<div class="container">
+  <div class="container">
+  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner">
+  	</a>  
       </div>
     </div>
 
