--- a/finalworking.html
+++ b/finalworking.html
@@ -60,7 +60,7 @@
   color: #fff;
 }
 
-.name:img {
+#name:img {
         height:400px;
         background-repeat: no-repeat;
         background-size: cover;
@@ -89,12 +89,10 @@
       </div>
     </div>
 
-<div class="name">
-  <div class="container">
+<section id="name">
   	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner">
   	</a>  
-      </div>
-    </div>
+    </section>
 
 <div class="jumbotron">
       <div class="container">
