--- a/finalworking.html
+++ b/finalworking.html
@@ -60,7 +60,7 @@
   color: #fff;
 }
 
-#name:img {
+#logo {
         height:400px;
         background-repeat: no-repeat;
         background-size: cover;
@@ -89,7 +89,7 @@
       </div>
     </div>
 
-<sectionid="name">
+<section id="logo">
   	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner">
   	</a>  
     </section>
