--- a/finalworking.html
+++ b/finalworking.html
@@ -19,6 +19,18 @@
 
 
 <style>
+
+
+body {
+        background-color: white;
+        background-size: cover;
+        font-family: 'Open Sans', sans-serif;
+        text-align: center;
+        box-shadow: 0px 5px 6px black;
+        font-weight: 300;
+        margin:auto;
+}
+        
 .nav a {
   color: #5a5a5a;
   font-size: 24px;
@@ -100,13 +112,14 @@
       </div>
     </div> 
 </body>
-<footer>
 <br>
+<footer>
 <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951" target="_blank">
 <img alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50"></a>
 <a href="https://www.facebook.com/rickydelgadojunior" target="_blank">
 <img alt="Facebook" src="http://i.imgur.com/kX0UajV.png" width="50" height="50"></a>
 <a href="https://twitter.com/RickyDelgadoMIA" target="_blank">
 <img alt="Twitter" src="http://i.imgur.com/eeDJ0FM.png" width="50" height="50"></a>
-	</footer>
+</footer>
+
 </html>
