--- a/finalworking.html
+++ b/finalworking.html
@@ -102,7 +102,7 @@ body {
     </div>
 
 <section id="logo">
-  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" margin="cover">
+  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" width="1200">
   	</a>  
     </section>
 
