--- a/finalworking.html
+++ b/finalworking.html
@@ -50,7 +50,7 @@ body {
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top:-60px;
+  margin-top:-260px;
 }
 
 .jumbotron .container {
@@ -102,7 +102,7 @@ body {
     </div>
 
 <section id="logo">
-  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" width="1200">
+  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" width="auto">
   	</a>  
     </section>
 
