--- a/finalworking.html
+++ b/finalworking.html
@@ -46,7 +46,7 @@ body {
 }
 
 .jumbotron {
-  background-image:url('http://i.imgur.com/fi7xlkS.png');
+  background-image:url('http://i.imgur.com/TliwTZw.png');
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
