--- a/finalworking.html
+++ b/finalworking.html
@@ -35,10 +35,11 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  margin-bottom:50px;
   z-index: 9999;
   width: 100%;
   height: 50px;
-  background-color: #00a087;
+  background-color: #03223d;
 }
         
 .nav a {
