--- a/finalworking.html
+++ b/finalworking.html
@@ -85,6 +85,7 @@ body {
 }
 
 #logo {
+        margin-top:75px;
         height:400px;
         background-repeat: no-repeat;
         background-size: cover;
