--- a/finalworking.html
+++ b/finalworking.html
@@ -43,13 +43,14 @@ body {
 }
         
 .nav a {
-  color: #5a5a5a;
+  color: white;
   font-size: 24px;
   font-weight: normal;
   font-family: 'Open Sans', sans-serif;
   padding: 14px 10px;
   text-transform: uppercase;
   text-decoration:none;
+  margin-bottom:7px;
 }
 
 .nav li {
