--- a/finalworking.html
+++ b/finalworking.html
@@ -117,7 +117,13 @@ body {
       <div class="container">
         <h1>BRINGING DESIGN TO LIFE, ONE BRIEF AT A TIME!</h1>
       </div>
-    </div> 
+    </div>
+    <ul>
+    <li><a href="https://www.facebook.com/rickydelgadojunior"><i class="fa fa-facebook"></i></a></li>
+    <li><a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"><i class="fa fa-linkedin"></i></a></li>
+    <li><a href="https://twitter.com/RickyDelgadoMIA"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="https://plus.google.com/u/0/117662504780521599168/posts"><i class="fa fa-google-plus"></i> </a></li>
+</ul>
 </body>
 <br>
 <footer>
