--- a/finalworking.html
+++ b/finalworking.html
@@ -93,7 +93,26 @@ body {
 	display: block;
 	margin:center;
         }
+	
+.fa-facebook {
+    background:#3b5998
+} 
+.fa-linkedin {
+    background:#007bb6
+}
+.fa-twitter {
+    background:#00aced
+}
+.google-plus {
+    background:#dd4b39
+}
+ul li i:hover {
+    opacity: .7;
+}
+
+
 </style>
+
 </head>
 
 <body>
@@ -125,14 +144,4 @@ body {
     <li><a href="https://plus.google.com/u/0/117662504780521599168/posts"><i class="fa fa-google-plus"></i> </a></li>
 </ul>
 </body>
-<br>
-<footer>
-<a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951" target="_blank">
-<img alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50"></a>
-<a href="https://www.facebook.com/rickydelgadojunior" target="_blank">
-<img alt="Facebook" src="http://i.imgur.com/kX0UajV.png" width="50" height="50"></a>
-<a href="https://twitter.com/RickyDelgadoMIA" target="_blank">
-<img alt="Twitter" src="http://i.imgur.com/eeDJ0FM.png" width="50" height="50"></a>
-</footer>
-
 </html>
