--- a/finalworking.html
+++ b/finalworking.html
@@ -147,11 +147,13 @@ ul li i:hover {
         <h1>BRINGING DESIGN TO LIFE, ONE BRIEF AT A TIME!</h1>
       </div>
     </div>
-<section id="icons">
+<nav>
+<div style="font-size: 20px; color: rgb(255, 255, 255); text-align: center;">
     <a href="https://www.facebook.com/rickydelgadojunior"><i class="fa fa-facebook"></i></a></li>
     <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"><i class="fa fa-linkedin"></i></a></li>
     <a href="https://twitter.com/RickyDelgadoMIA"><i class="fa fa-twitter"></i></a></li>
     <a href="https://plus.google.com/u/0/117662504780521599168/posts"><i class="fa fa-google-plus"></i> </a></li>
-</section>
+</div>
+</nav>
 </body>
 </html>
