--- a/finalworking.html
+++ b/finalworking.html
@@ -95,16 +95,16 @@ body {
         }
 	
 .fa-facebook {
-    background:#3b5998
+    background: rgba(0, 172, 237, 0);
 } 
 .fa-linkedin {
-    background:#007bb6
+    background: rgba(0, 172, 237, 0);
 }
 .fa-twitter {
-    background:#00aced
+    background: rgba(0, 172, 237, 0);
 }
 .google-plus {
-    background:#dd4b39
+    background: rgba(0, 172, 237, 0);
 }
 ul li i:hover {
     opacity: .7;
