--- a/finalworking.html
+++ b/finalworking.html
@@ -96,15 +96,19 @@ body {
 	
 .fa-facebook {
     background: rgba(0, 172, 237, 0);
+    color: #03223d;
 } 
 .fa-linkedin {
     background: rgba(0, 172, 237, 0);
+    color: #03223d;
 }
 .fa-twitter {
     background: rgba(0, 172, 237, 0);
+    color: #03223d;
 }
 .google-plus {
     background: rgba(0, 172, 237, 0);
+    color: #03223d;
 }
 ul li i:hover {
     opacity: .7;
