--- a/finalworking.html
+++ b/finalworking.html
@@ -152,7 +152,7 @@ ul li i:hover {
       </div>
     </div>
 <nav>
-	<div style="font-size: 20px; color: rgb(255, 255, 255); text-align: center;">
+	<div style="font-size: 30px; text-align: center;">
     <a href="https://www.facebook.com/rickydelgadojunior"> <i class="fa fa-facebook-official"></i></a>
     <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"><i class="fa fa-linkedin"></i></a>
     <a href="https://twitter.com/RickyDelgadoMIA"><i class="fa fa-twitter"></i></a></li>
