--- a/finalworking.html
+++ b/finalworking.html
@@ -149,6 +149,7 @@ ul li i:hover {
 <div class="jumbotron">
       <div class="container">
         <h1>BRINGING DESIGN TO LIFE, ONE BRIEF AT A TIME!</h1>
+        <span class="typcn typcn-flash-outline"></span>
       </div>
     </div>
 <nav>
