--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
 <style>
 body {
-        background-color: white;
+        background-image: url(http://i.imgur.com/WSOLgg8.png);
         background-size: cover;
+        background-position:fixed;
+        background-repeat: no-repeat;
         font-family: 'Open Sans', sans-serif;
         text-align: center;
         box-shadow: 0px 5px 6px black;
