--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <style>
 body {
-        background-image: url:(http://i.imgur.com/WSOLgg8.png);
+        background-image: url("http://i.imgur.com/WSOLgg8.png");
         background-size: cover;
         background-position:fixed;
         background-repeat: no-repeat;
