--- a/about.html
+++ b/about.html
@@ -148,14 +148,26 @@ of Art & Design in Downtown Miami focusing more in graphic design and digital il
 <br>
 I am constantly working on my coding skills to better suit your needs! 
 </article>
-<br>
-Check out <a href="http://rickydelgado.me/portfolio">my portfolio!</a>
-<br>
-
-<a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951" target="_blank">
-<img alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50"></a>
-<a href="https://www.facebook.com/rickydelgadojunior" target="_blank">
-<img alt="Facebook" src="http://i.imgur.com/kX0UajV.png" width="50" height="50"></a>
-<a href="https://twitter.com/RickyDelgadoMIA" target="_blank">
-<img alt="Twitter" src="http://i.imgur.com/eeDJ0FM.png" width="50" height="50"></a>
+<div class="jumbotron">
+      <div class="container">
+        <h1> There are some things about me you should know </h1>
+        <p> Hi! My name is Ricardo Delgado but you can call me Ricky!
+	<br>
+	<p>I was born and raised in beautiful sunny Miami
+	<br>
+	<p> I am currently pursuing a degree in graphic and web design at Miami International University of Art & Design in Downtown Miami.
+	<br>
+	<p> I love to create anything! Whether its a logo design, or even a doodle, I really get a kick out of this stuff!
+	<br>
+      </div>
+    </div>
+<nav>
+	<div style="font-size: 30px; text-align: center;">
+    <a href="https://www.facebook.com/rickydelgadojunior"> <i class="fa fa-facebook-official"></i></a>
+    <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"><i class="fa fa-linkedin"></i></a>
+    <a href="https://twitter.com/RickyDelgadoMIA"><i class="fa fa-twitter"></i></a></li>
+    <a href="https://plus.google.com/u/0/117662504780521599168/posts"><i class="fa fa-google-plus"></i> </a>
+    </div>
+</nav>
 </body>
+</html>
